syntax = "proto3";

package arduino_trader.common;

// Empty message for RPCs that don't need parameters
message Empty {}

// Generic status response
message StatusResponse {
  bool success = 1;
  string message = 2;
  int32 code = 3;
}

// Timestamp message
message Timestamp {
  int64 seconds = 1;
  int32 nanos = 2;
}

// Money representation
message Money {
  string amount = 1;  // Decimal as string to preserve precision
  string currency = 2;
}

// Currency enum
enum Currency {
  CURRENCY_UNSPECIFIED = 0;
  USD = 1;
  EUR = 2;
  GBP = 3;
  JPY = 4;
}

// Trade side
enum TradeSide {
  TRADE_SIDE_UNSPECIFIED = 0;
  BUY = 1;
  SELL = 2;
}

// Trade status
enum TradeStatus {
  TRADE_STATUS_UNSPECIFIED = 0;
  PENDING = 1;
  EXECUTED = 2;
  FAILED = 3;
  CANCELLED = 4;
}

// Health check response
message HealthCheckResponse {
  bool healthy = 1;
  string version = 2;
  string status = 3;
}
